c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/assign_val_in_initializer.c
int main(void) {
    int a = a = 5;
    return a;
}